# funwithcache

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  readme.md  requirements.txt
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker_build.sh
src/: CMakeLists.txt
src/cache_miss/: CMakeLists.txt  cache_miss.hpp  main.cpp
src/common/: Args.cpp  Args.hpp  CMakeLists.txt  Matrix.hpp  Realtime.hpp  Result.hpp  Warmup.cpp  Warmup.hpp
src/cpp/: CMakeLists.txt
src/cpp/cache_miss/: CMakeLists.txt  cache_miss.cpp
src/cpp/common/: CMakeLists.txt  Primitive.hpp  Realtime.hpp  Timer.hpp  Warmup.hpp
src/cpp/locality/: locality.cpp
src/cpp/locality_1/: CMakeLists.txt  locality_1.cpp  locality_1.hpp
src/cpp/locality_2/: CMakeLists.txt  locality_2.cpp  locality_2.hpp
src/cpp/main/: CMakeLists.txt  main.cpp
src/cpp/proto/: CMakeLists.txt  output.proto
src/ex1_prefetch/: main.cpp
src/locality/: CMakeLists.txt  locality.cpp  locality.hpp  main.cpp
src/main/: main.cpp
src/memory_leak/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt  output.proto
src/python/: main.py  output_pb2.py
